# PersonalScripts

./: .copier-answers.yml  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
Scripts/: BackupOneDrive.py  CreateSelfSignedCert.py  DeduplicateFiles.py  FindAgentVersions.py  FindCopierTargets.py  FindPythonDependencyVersions.py  ProcessRippedCDs.py  UpdateProjectScaffolding.py
Scripts/Impl/: CallbackServer.py  RepositoryUtils.py
